# rust_chat

./: .env  Cargo.toml
chat_server/: Cargo.toml
chat_server/src/: error.rs  lib.rs  main.rs
chat_server/src/handlers/: message.rs
chat_server/src/models/: user.rs
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: mod.rs
